...
        isselected[1] = listing.isRequest;
        isselected[0] = !listing.isRequest;
        uid = listing.userID;
        imageCache.clear();
        storageAccess.fileFromImageUrl(imageURL).then((file) {
          setState(() {
            image = file;
          });
        });
      });
      loadVenueName();
    });
  }

  //String isSelected;
  List<bool> isselected = [true, false];
  List listItem = [
    'Beverages',
    'Canned Food',
    'Dairy Product',
    'Dry Food',
    'Snacks',
    'Vegetables',
  ];
  String valueChoose;
  File image;
  LatLng listingVenue;
...
              ),
              Padding(
                padding: const EdgeInsets.fromLTRB(20, 5, 20, 0),
                child: Container(
                  height: 40,
                  child: ToggleButtons(
                    key: const Key('toggleBtn'),
                    borderRadius: BorderRadius.circular(8.0),
                    isSelected: isselected,
                    color: Colors.grey[500],
                    selectedColor: primaryColor,
                    fillColor: Colors.grey[800],
                    renderBorder: true,
...
                      Padding(
                        key: const Key('GivingAway'),
                        padding: const EdgeInsets.symmetric(horizontal: 8.0),
                        child: Text('Giving away',style: TextStyle(fontSize: 17)),
                      ),
                      Padding(
                        key: const Key('RequestingFor'),
                        padding: const EdgeInsets.symmetric(horizontal: 8.0),
                        child:
                        Text('Requesting for ', style: TextStyle(fontSize: 17)),
                      ),
                    ],
                    onPressed: (int newIndex) {
...
              ),
              Padding(
                padding: const EdgeInsets.fromLTRB(20, 10, 20, 10),
                child: Container(
                  height: 50,
                  child: TextField(
                      key: Key('Title'),
                      style: TextStyle(fontSize: 16),
                      controller: listingTitleController,
                      decoration: InputDecoration(
                          focusedBorder: OutlineInputBorder(
                            borderSide: BorderSide(color: Colors.white, width: 1.0),
                            borderRadius: BorderRadius.all(Radius.circular(16.0)),
...
              ),
              Container(
                child: Padding(
                  padding: const EdgeInsets.fromLTRB(20, 10, 20, 10),
                  child: Container(
                    child: TextField(
                        key: const Key('description'),
                        minLines: 4,
                        //Normal textInputField will be displayed
                        maxLines: 4,
                        style: TextStyle(fontSize: 16),
                        controller: descriptionController,
                        decoration: InputDecoration(
...
                ),
              ),
              SizedBox(height: 20),
              Container(
                padding: EdgeInsets.fromLTRB(100, 5, 100, 20),
                key: const Key('Save'),
                child: CustomCurvedButton(btnText: 'Save Changes', btnPressed: () async {
                  if (listingTitleController.text == '') {
                    await Dialogs.errorAbortDialog(context,
                        'Name of product is empty.\nPlease fill up the respective field.');
                    print("No listing title inputted");
                    return; //TODO frontend user warning for empty listingTitle/itemName
                  }

                  var imageString =
                  image != null && imageURL == 'newimagechosen'
...
        builder: (BuildContext bc) {
          return SafeArea(
            child: Container(
              child: Wrap(
                children: <Widget>[
                  ListTile(
                      key: const Key('Photo Library'),
                      leading: Icon(Icons.photo_library),
                      title: Text('Photo Library'),
                      onTap: () {
                        _gallery();
                        Navigator.of(context).pop();
                      }),
                  ListTile(
                    key: const Key('Camera'),
                    leading: Icon(Icons.photo_camera),
                    title: Text('Camera'),
                    onTap: () {
                      _camera();
                      Navigator.of(context).pop();
                    },
...
