...
                              fontSize: 35,
                            ),
                          ),
                        ),
                        SizedBox(height: 20),
                        TextFormField(
                            key: const ValueKey('email'),
                            validator: (value)=> value.isEmpty ? "Email Required" : !value.contains("@") ? "Invalid Email" : null,
                            controller: emailController,
                            decoration: InputDecoration(
                                filled: true,
                                fillColor: offWhite,
                                hintText: 'Email')),
                        SizedBox(height: 5),
                        TextFormField(
                            key: const ValueKey('password'),
                            obscureText: true,
                            validator: (value)=> value.isEmpty ? "Password Required": null,
                            controller: passwordController,
                            decoration: InputDecoration(
                                filled: true,
                                fillColor: offWhite,
                                hintText: 'Password')),
                        SizedBox(height: 20),
                        CustomButton(
                            btnKey: 'Login',
                            btnText: 'Log In',
                            btnPressed: (){
                              // Login Validation
                              if(validate()) {
                                // Sign in with email and password
                                loginUserClick();
...
