...
  ]);
}

Widget NearbyList() {
  // TODO: this is hardcoded data, to remove
  List<ListingCard> listing_list = [
    ListingCard(
        title: "Old Town White Coffee",
        owner: "leejunwei",
        listingImg: 'assets/coffee.jpg',
        ownerImg: 'assets/icons/default.png'),
    ListingCard(
        title: "Korean Spicy Noodles Samyang",
...
